# AutoEncoders

./: .gitignore  README.md  pyproject.toml
docs/: autoencoder.md  variational_autoencoder.md
models/autoencoder/cifar10_3072_1024/: config.yaml  loss_curve.csv  metrics.csv
models/autoencoder/fashion_mnist_784_256/: config.yaml  fashion_mnist_784_256.pth  loss_curve.csv  metrics.csv
models/autoencoder/mnist_784_128/: loss_curve.csv  metrics.csv  mnist_784_128.pth
models/variational_autoencoder/cifar10_3072_1024_512/: config.yaml  loss_curve.csv  metrics.csv
models/variational_autoencoder/fashion_mnist_784_512_256/: config.yaml  loss_curve.csv  metrics.csv
models/variational_autoencoder/mnist_784_256_128/: loss_curve.csv  metrics.csv  mnist_784_256_128.pth
source/: run_autoencoder.py  run_variational_autoencoder.py
source/autoencoders/: __init__.py  _base_class.py  autoencoder.py  dataloader.py  util.py  variational_autoencoder.py
source/config/: autoencoder.yaml  variational_autoencoder.yaml
