[project]
name = "autoencoders"
version = "0.1.0"
description = ""
authors = [
    {name = "Haruno YUZUNOKI",email = "yuzunoki.haruno@gmail.com"}
]
license = {text = "THE BEER-WARE LICENSE"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch (>=2.7.1,<3.0.0)",
    "torchvision (>=0.22.1,<0.23.0)",
    "torchaudio (>=2.7.1,<3.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "scikit-image (>=0.25.2,<0.26.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "scikit-learn (>=1.7.0,<2.0.0)",
    "tqdm (>=4.67.1,<5.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.3.0"
black = "^25.1.0"
isort = "^6.0.1"
mypy = "^1.16.1"
pytest = "^8.4.1"

[tool.flake8]
max-line-length = 79

[tool.black]
line-length = 79

[tool.isort]
profile = "black"
line_length = 79

[tool.mypy]
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
ignore_missing_imports = true
